--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "webpack --watch & http-server ./dist --port 8111 -s"
   },
   "dependencies": {
+    "express": "^4.17.3",
     "path": "^0.12.7",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@tweakpane/core": "^1.0.8",
+    "@types/express": "^4.17.13",
     "@types/styled-components": "^5.1.15",
     "@types/three": "^0.133.0",
     "clean-webpack-plugin": "^3.0.0",
